--- a/index.html
+++ b/index.html
@@ -246,49 +246,55 @@
             <h2 class="title title-dark">Ведущие курсов</h2>
             <!-- /.title -->
             <div class="autor__inner">
-                <div class="autor__inner--item">
-                    <img src="img/vadim.jpg" alt="Вадим Куркин" class="autor__inner--img">
-                </div>
-                <!-- /.autor__inner-item -->
-                <div class="autor__inner--item">
-                    <div class="autor__inner--text">
-                        <span class="autor__inner--name">Вадим Куркин</span>
-                        <p class="autor__text">Дипломированный психолог, специализируется на отношениях, самооценке и личной эффективности</p>
-                        <!-- /.autor__text -->
-                        <p class="autor__text">Автор книги "Психолог в кармане или 101 практика на все случаи жизни"</p>
-                        <!-- /.autor__text -->
-                        <p class="autor__text">Создает и проводит онлайн-тренинги для тех, кто хочет избавиться от тревог, проблем и неврозов, наладить отношения и жить радостно</p>
-                        <!-- /.autor__text -->
-                        <p class="autor__text">Дает много бесплатной информации и занятий, а на платных программах всегда дает больше, чем обещал</p>
-                        <!-- /.autor__text -->
-                        <p class="autor__text">На 2020 год у Вадима Куркина 500 000 учеников из 79 стран</p>
-                        <!-- /.autor__text -->
+                <div class="autor__inner--line">
+                    <div class="autor__inner--item">
+                        <img src="img/vadim.jpg" alt="Вадим Куркин" class="autor__inner--img">
                     </div>
-                    <!-- /.autor__inner--text -->
-                    
-                </div>
-                <!-- /.autor__inner-item -->
-                <div class="autor__inner--item">
-                    <div class="autor__inner--text">
-                        <span class="autor__inner--name">Юлия Куркина</span>
-                        <p class="autor__text">Сертифицированный тренер личностного развития </p>
-                        <!-- /.autor__text -->
-                        <p class="autor__text">Дипломированный терапевт по методам RPT, Вселенской терапии Тальписа, метафорическим картам, символическому моделированию, ПЭАТ и ГП-4, духовной интеграционике</p>
-                        <!-- /.autor__text -->
-                        <p class="autor__text">Прошла множество тренингов по личностному росту, а также в области женской психологии </p>
-                        <!-- /.autor__text -->
-                        <p class="autor__text">Соавтор и ведущая курсов, семинаров и женских обучающих программ</p>
-                        <!-- /.autor__text -->
-                        <p class="autor__text">Прошла свой непростой путь и построила жизнь и отношения своей мечты</p>
-                        <!-- /.autor__text -->
+                    <!-- /.autor__inner-item -->
+                    <div class="autor__inner--item">
+                        <div class="autor__inner--text">
+                            <span class="autor__inner--name">Вадим Куркин</span>
+                            <p class="autor__text">Дипломированный психолог, специализируется на отношениях, самооценке и личной эффективности</p>
+                            <!-- /.autor__text -->
+                            <p class="autor__text">Автор книги "Психолог в кармане или 101 практика на все случаи жизни"</p>
+                            <!-- /.autor__text -->
+                            <p class="autor__text">Создает и проводит онлайн-тренинги для тех, кто хочет избавиться от тревог, проблем и неврозов, наладить отношения и жить радостно</p>
+                            <!-- /.autor__text -->
+                            <p class="autor__text">Дает много бесплатной информации и занятий, а на платных программах всегда дает больше, чем обещал</p>
+                            <!-- /.autor__text -->
+                            <p class="autor__text">На 2020 год у Вадима Куркина 500 000 учеников из 79 стран</p>
+                            <!-- /.autor__text -->
+                        </div>
+                        <!-- /.autor__inner--text -->
+                        
                     </div>
-                    <!-- /.autor__inner--text -->
+                    <!-- /.autor__inner-item -->
                 </div>
-                <!-- /.autor__inner-item -->
-                <div class="autor__inner--item">
-                    <img src="img/yulya.jpg" alt="Юлия Куркина" class="autor__inner--img">
+                <!-- /.autor__inner--line -->
+                <div class="autor__inner--line">
+                    <div class="autor__inner--item">
+                        <div class="autor__inner--text">
+                            <span class="autor__inner--name">Юлия Куркина</span>
+                            <p class="autor__text">Сертифицированный тренер личностного развития </p>
+                            <!-- /.autor__text -->
+                            <p class="autor__text">Дипломированный терапевт по методам RPT, Вселенской терапии Тальписа, метафорическим картам, символическому моделированию, ПЭАТ и ГП-4, духовной интеграционике</p>
+                            <!-- /.autor__text -->
+                            <p class="autor__text">Прошла множество тренингов по личностному росту, а также в области женской психологии </p>
+                            <!-- /.autor__text -->
+                            <p class="autor__text">Соавтор и ведущая курсов, семинаров и женских обучающих программ</p>
+                            <!-- /.autor__text -->
+                            <p class="autor__text">Прошла свой непростой путь и построила жизнь и отношения своей мечты</p>
+                            <!-- /.autor__text -->
+                        </div>
+                        <!-- /.autor__inner--text -->
+                    </div>
+                    <!-- /.autor__inner-item -->
+                    <div class="autor__inner--item">
+                        <img src="img/yulya.jpg" alt="Юлия Куркина" class="autor__inner--img">
+                    </div>
+                    <!-- /.autor__inner-item -->
                 </div>
-                <!-- /.autor__inner-item -->
+                <!-- /.autor__inner--line -->
             </div>
             <!-- /.autor__inner -->
         </div>
