correct from validator

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/jquery.modal.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.4/moment-timezone-with-data.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.js"></script>
+    <script  src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.4/moment-timezone-with-data.js"></script>
     <script src="js/timer.js"></script>
     <script src="js/jquery.modal.min.js"></script>
     <title>Новогодняя распродажа</title>
@@ -61,7 +61,7 @@
                                 <div class="timer__inner--item__num" id="days"></div>
                                 <div class="timer__inner--item__text">дней</div>
                             </div>
-                            <!-- /.timer__inner--item__col -->
+                            <!-- /.timer__inner-item__col -->
                         </div>
                         <!-- /.timer__inner-item -->
                         <div class="timer__inner--item">
@@ -69,7 +69,7 @@
                                 <div class="timer__inner--item__num" id="hours"></div>
                                 <div class="timer__inner--item__text">часов</div>
                             </div>
-                            <!-- /.timer__inner--item__col -->
+                            <!-- /.timer__inner-item__col -->
                         </div>
                         <!-- /.timer__inner-item -->
                         <div class="timer__inner--item">
@@ -77,7 +77,7 @@
                                 <div class="timer__inner--item__num" id="minutes"></div>
                                 <div class="timer__inner--item__text">минут</div>
                             </div>
-                            <!-- /.timer__inner--item__col -->
+                            <!-- /.timer__inner-item__col -->
                         </div>
                         <!-- /.timer__inner-item -->
                         <div class="timer__inner--item">
@@ -85,7 +85,7 @@
                                 <div class="timer__inner--item__num" id="seconds"></div>
                                 <div class="timer__inner--item__text">секунд</div>
                             </div>
-                            <!-- /.timer__inner--item__col -->
+                            <!-- /.timer__inner-item__col -->
                         </div>
                         <!-- /.timer__inner-item -->
                 </div>
@@ -128,15 +128,15 @@
                     <a class="package__link -dark" href="#ex1" rel="modal:open">"Осознанное родительство" 1 и 2 ступень</a>
                     <div id="ex1" class="modal modal__inf">
                         <p class="modal__inf--title">Курс “Осознанное родительство”<br> I ступень</p>
-                        <!-- /.modal__inf--title -->
+                        <!-- /.modal__inf-title -->
                         <p class="modal__inf--text">11 онлайн-уроков + обратные связи от ведущих</p>
                         <p class="modal__inf--text">Всесторонняя подготовка будущих родителей к беременности и родам: от момента планирования ребенка до послеродового восстановления женщины и ухода за новорожденным. Охватывает аспекты психологии, здоровья, отношений, физиологии. Курс полезен в первую очередь будущим мамам, но также содержит важную информацию для отцов. Основан на личном опыте экспертов и проверенных ими методиках.</p>
-                        <!-- /.modal__inf--text -->
+                        <!-- /.modal__inf-text -->
                         <p class="modal__inf--price">Цена без скидки: 7500 рублей</p>
-                        <!-- /.modal__inf--price -->
+                        <!-- /.modal__inf-price -->
                         <a class="button button-more" href="#">Купить I пакет</a> <!-- /.button -->
                     </div>
-                    <!-- /.package__link--inf -->
+                    <!-- /.package__link-inf -->
                     <a class="package__link -dark" href="#">"Родители. Род. Семья"</a>
                     <a class="package__link -dark" href="#">"Секреты гениальности"</a>
                     <a class="package__link -dark" href="#">"Коммуникации и манипуляции"</a>
@@ -146,11 +146,11 @@
                 <!-- /.package__inner-text -->
                 <div class="package__cost">
                     <span class="package__cost--title -dark">Цена за 1 пакет:</span>
-                    <!-- /.package__cost--title -->
+                    <!-- /.package__cost-title -->
                     <span class="package__cost--old -dark">57 990 рублей</span>
-                    <!-- /.package__cost--old -->
+                    <!-- /.package__cost-old -->
                     <span class="package__cost--new -red">9 500 рублей</span>
-                    <!-- /.package__cost--old -->
+                    <!-- /.package__cost-old -->
                 </div>
                 <!-- /.package__cost -->
                 <div class="package__item--footer">
@@ -183,11 +183,11 @@
                 <!-- /.package__inner-text -->
                 <div class="package__cost">
                     <span class="package__cost--title">Цена за 1 пакет:</span>
-                    <!-- /.package__cost--title -->
+                    <!-- /.package__cost-title -->
                     <span class="package__cost--old">57 990 рублей</span>
-                    <!-- /.package__cost--old -->
+                    <!-- /.package__cost-old -->
                     <span class="package__cost--new">9 500 рублей</span>
-                    <!-- /.package__cost--old -->
+                    <!-- /.package__cost-old -->
                 </div>
                 <!-- /.package__cost -->
                 <div class="package__item--footer">
@@ -220,11 +220,11 @@
                 <!-- /.package__inner-text -->
                 <div class="package__cost">
                     <span class="package__cost--title">Цена за 1 пакет:</span>
-                    <!-- /.package__cost--title -->
+                    <!-- /.package__cost-title -->
                     <span class="package__cost--old">57 990 рублей</span>
-                    <!-- /.package__cost--old -->
+                    <!-- /.package__cost-old -->
                     <span class="package__cost--new">9 500 рублей</span>
-                    <!-- /.package__cost--old -->
+                    <!-- /.package__cost-old -->
                 </div>
                 <!-- /.package__cost -->
                 <div class="package__item--footer">
@@ -265,12 +265,12 @@
                             <p class="autor__text">На 2020 год у Вадима Куркина 500 000 учеников из 79 стран</p>
                             <!-- /.autor__text -->
                         </div>
-                        <!-- /.autor__inner--text -->
+                        <!-- /.autor__inner-text -->
                         
                     </div>
                     <!-- /.autor__inner-item -->
                 </div>
-                <!-- /.autor__inner--line -->
+                <!-- /.autor__inner-line -->
                 <div class="autor__inner--line">
                     <div class="autor__inner--item">
                         <div class="autor__inner--text">
@@ -286,7 +286,7 @@
                             <p class="autor__text">Прошла свой непростой путь и построила жизнь и отношения своей мечты</p>
                             <!-- /.autor__text -->
                         </div>
-                        <!-- /.autor__inner--text -->
+                        <!-- /.autor__inner-text -->
                     </div>
                     <!-- /.autor__inner-item -->
                     <div class="autor__inner--item">
@@ -294,7 +294,7 @@
                     </div>
                     <!-- /.autor__inner-item -->
                 </div>
-                <!-- /.autor__inner--line -->
+                <!-- /.autor__inner-line -->
             </div>
             <!-- /.autor__inner -->
         </div>
