--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div class="autor__inner">
                 <div class="autor__inner--line">
                     <div class="autor__inner--item">
-                        <img src="img/vadim.jpg" alt="Вадим Куркин" class="autor__inner--img">
+                        <img src="img/vadim-min.jpg" alt="Вадим Куркин" class="autor__inner--img">
                     </div>
                     <!-- /.autor__inner-item -->
                     <div class="autor__inner--item">
@@ -289,7 +289,7 @@
                     </div>
                     <!-- /.autor__inner-item -->
                     <div class="autor__inner--item">
-                        <img src="img/yulya.jpg" alt="Юлия Куркина" class="autor__inner--img">
+                        <img src="img/yulya-min.jpg" alt="Юлия Куркина" class="autor__inner--img">
                     </div>
                     <!-- /.autor__inner-item -->
                 </div>
