--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.4/moment-timezone-with-data.js"></script>
     <script src="js/timer.js"></script>
+    <link rel="stylesheet" href="css/style-min.css">
     
     <title>Новогодняя распродажа</title>
 </head>
