minimize background image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="intro">
         <div class="container">
             <div class="intro__inner">
-                <img class="intro__img-mobile" src="img/bg-intro-mobile.png" alt="Image">
+                <img class="intro__img-mobile" src="img/bg-intro-mobile-min.png" alt="Image">
                 <h1 class="title title-intro">Новогодняя распродажа курсов</h1>
                 <!-- /.title -->
                 <p class="subtitle text">Подари себе новую жизнь. Раскрой
