decided to delete video block from mobile

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="video__inner">
                 <h2 class="title title-video">Заголовок для видео</h2>
                 <!-- /.title -->
-                <iframe class="video__inner--item" src="https://www.youtube.com/embed/SEEV5RuiIcU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="video__inner--item" src="https://www.youtube.com/embed/SEEV5RuiIcU" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <!-- /.video__inner -->
         </div>
@@ -116,7 +116,7 @@
     </section>
     <!-- /.video -->
     <section class="package">
-        <img class="package-img" src="img/animal.png" alt="Art">
+        <img class="package-img" src="img/animal-min.png" alt="Art">
         <div class="title title-dark">Уроки по саморазвитию на любой вкус</div>
         <!-- /.title -->
         <div class="package__inner" id="course">
