--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preload" href="fonts/gilroy-black.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="fonts/ProximaNova-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="fonts/ProximaNova-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.4/moment-timezone-with-data.js"></script>
     <script src="js/timer.js"></script>
