--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preload" href="js/timer.js" as="script">
-    <link rel="preload" href="css/style-min.css" as="style">
-    <link rel="stylesheet" href="css/style-min.css">
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="stylesheet" href="css/style.css">
 
     <link rel="preload" href="fonts/gilroy-black.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="fonts/ProximaNova-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
