using minimize images

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="preload" href="js/timer.js" as="script">
+
     <link href="css/style.css" rel="stylesheet">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.js"></script>
-    <script  src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.4/moment-timezone-with-data.js"></script>
-    <script src="js/timer.js"></script>
-    <script src="js/jquery.modal.min.js"></script>
     <title>Новогодняя распродажа</title>
 </head>
 <body>
@@ -111,7 +110,7 @@
     </section>
     <!-- /.video -->
     <section class="package">
-        <img class="package-img" src="img/animal.png" alt="Art">
+        <img class="package-img" src="img/animal-min.png" alt="Art">
         <div class="title title-dark">Уроки по саморазвитию на любой вкус</div>
         <!-- /.title -->
         <div class="package__inner" id="course">
@@ -247,7 +246,7 @@
             <div class="autor__inner">
                 <div class="autor__inner--line">
                     <div class="autor__inner--item">
-                        <img src="img/vadim.jpg" alt="Вадим Куркин" class="autor__inner--img">
+                        <img src="img/vadim-min.jpg" alt="Вадим Куркин" class="autor__inner--img">
                     </div>
                     <!-- /.autor__inner-item -->
                     <div class="autor__inner--item">
@@ -289,7 +288,7 @@
                     </div>
                     <!-- /.autor__inner-item -->
                     <div class="autor__inner--item">
-                        <img src="img/yulya.jpg" alt="Юлия Куркина" class="autor__inner--img">
+                        <img src="img/yulya-min.jpg" alt="Юлия Куркина" class="autor__inner--img">
                     </div>
                     <!-- /.autor__inner-item -->
                 </div>
@@ -336,5 +335,10 @@
         <!-- /.container -->
     </footer>
     <!-- /.footer -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.4/moment-timezone-with-data.js"></script>
+    <script src="js/timer.js"></script>
+    <script src="js/jquery.modal.min.js"></script>
 </body>
 </html>
