--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preload" href="fonts/gilroy-black.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-    <link rel="preload" href="fonts/ProximaNova-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-    <link rel="preload" href="fonts/ProximaNova-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-    
+    <link rel="preload" href="fonts/gilroy-black.ttf" as="font">
+    <link rel="preload" href="fonts/ProximaNova-Bold.ttf" as="font">
+    <link rel="preload" href="fonts/ProximaNova-Regular.ttf" as="font">
+
     <link rel="preload" href="css/style.css" as="style">
     <link rel="preload" href="js/timer.js" as="script">
 
@@ -45,7 +45,7 @@
     <section class="intro">
         <div class="container">
             <div class="intro__inner">
-                <img class="intro__img-mobile" src="img/bg-intro-mobile.png" alt="Image">
+                <img class="intro__img-mobile" src="img/bg-intro-mobile-min.png" alt="Image">
                 <h1 class="title title-intro">Новогодняя распродажа курсов</h1>
                 <!-- /.title -->
                 <p class="subtitle text">Подари себе новую жизнь. Раскрой
